--- a/week_3/monday/positioning_operation-master/css/operation.css
+++ b/week_3/monday/positioning_operation-master/css/operation.css
@@ -8,4 +8,29 @@ body {
   margin: 0 auto;
   padding: 10px;
   width: 400px;
+  position: relative;
 }
+
+.breadbasket {
+  position: absolute;
+  top: 439px;
+  left: 201px; 
+} 
+
+.butterflies {
+  position: absolute;
+  top: 332px;
+  left: 225px; 
+} 
+
+.wishbone {
+  position: absolute;
+  top: 100px;
+  left: 20px; 
+} 
+
+.heart {
+  position: absolute;
+  top: 50px;
+  left: 20; 
+} 
