--- a/homeworks/cookie_confectionary/src/index.css
+++ b/homeworks/cookie_confectionary/src/index.css
@@ -5,6 +5,7 @@
 
 body {
   background-image: url("https://s3.amazonaws.com/truffle-renditions/cookies-filled-with-dulce-de-leche_l_en/thumbnails/1080p-Thumbnail.png");
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
